--- a/AdressListWithSwift3/Controller/Contact/New/NewContactController.xib
+++ b/AdressListWithSwift3/Controller/Contact/New/NewContactController.xib
@@ -45,9 +45,6 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list_bg" translatesAutoresizingMaskIntoConstraints="NO" id="1Ys-6q-ii6">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                </imageView>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MEM-S9-7JJ">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="AWE-Xq-neL">
@@ -544,23 +541,8 @@
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S19-7W-cfR">
-                            <rect key="frame" x="90" y="487.5" width="70" height="25"/>
-                            <color key="backgroundColor" red="0.62745098040000002" green="0.99607843139999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="70" id="Age-T9-bC3"/>
-                                <constraint firstAttribute="height" constant="25" id="NxP-g3-rIJ"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <state key="normal" title="测试">
-                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <connections>
-                                <action selector="levelItemAction:" destination="-1" eventType="touchUpInside" id="4Ai-82-S6v"/>
-                            </connections>
-                        </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o6d-DY-2du" userLabel="levelV">
-                            <rect key="frame" x="24" y="524" width="327" height="39"/>
+                            <rect key="frame" x="24" y="524" width="327" height="78"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXa-vF-ni3" userLabel="jingliV">
                                     <rect key="frame" x="0.0" y="0.0" width="82" height="39"/>
@@ -658,25 +640,54 @@
                                         <constraint firstItem="COG-3n-iPE" firstAttribute="leading" secondItem="4sg-gP-UtQ" secondAttribute="leading" constant="3" id="vXd-WB-PdA"/>
                                     </constraints>
                                 </view>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oOK-tU-RCP" userLabel="testV">
+                                    <rect key="frame" x="0.0" y="39" width="82" height="39"/>
+                                    <subviews>
+                                        <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S19-7W-cfR">
+                                            <rect key="frame" x="3" y="7" width="76" height="25"/>
+                                            <color key="backgroundColor" red="0.62745098040000002" green="0.99607843139999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="25" id="NxP-g3-rIJ"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <state key="normal" title="测试">
+                                                <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="levelItemAction:" destination="-1" eventType="touchUpInside" id="4Ai-82-S6v"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="S19-7W-cfR" firstAttribute="centerY" secondItem="oOK-tU-RCP" secondAttribute="centerY" id="NUC-R3-dNf"/>
+                                        <constraint firstAttribute="trailing" secondItem="S19-7W-cfR" secondAttribute="trailing" constant="3" id="hg5-nd-1M7"/>
+                                        <constraint firstItem="S19-7W-cfR" firstAttribute="leading" secondItem="oOK-tU-RCP" secondAttribute="leading" constant="3" id="oyW-vg-qcM"/>
+                                    </constraints>
+                                </view>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="4sg-gP-UtQ" firstAttribute="leading" secondItem="xwe-6q-Iz6" secondAttribute="trailing" id="0XX-bl-CXG"/>
                                 <constraint firstItem="xwe-6q-Iz6" firstAttribute="width" secondItem="gWL-5R-uoU" secondAttribute="width" id="2hz-GY-fQI"/>
                                 <constraint firstItem="4sg-gP-UtQ" firstAttribute="height" secondItem="xwe-6q-Iz6" secondAttribute="height" id="3o4-gq-ghF"/>
+                                <constraint firstItem="oOK-tU-RCP" firstAttribute="width" secondItem="nXa-vF-ni3" secondAttribute="width" id="BdK-TG-aS7"/>
                                 <constraint firstItem="gWL-5R-uoU" firstAttribute="height" secondItem="nXa-vF-ni3" secondAttribute="height" id="Ccm-Gg-lhj"/>
                                 <constraint firstItem="nXa-vF-ni3" firstAttribute="leading" secondItem="o6d-DY-2du" secondAttribute="leading" id="FJR-nM-C5W"/>
                                 <constraint firstItem="gWL-5R-uoU" firstAttribute="centerY" secondItem="nXa-vF-ni3" secondAttribute="centerY" id="Gya-LH-kO5"/>
                                 <constraint firstItem="4sg-gP-UtQ" firstAttribute="centerY" secondItem="xwe-6q-Iz6" secondAttribute="centerY" id="Vze-ra-iTD"/>
+                                <constraint firstItem="oOK-tU-RCP" firstAttribute="centerX" secondItem="nXa-vF-ni3" secondAttribute="centerX" id="cKc-8L-sLx"/>
                                 <constraint firstItem="gWL-5R-uoU" firstAttribute="width" secondItem="nXa-vF-ni3" secondAttribute="width" id="cqd-jC-JyK"/>
+                                <constraint firstItem="oOK-tU-RCP" firstAttribute="height" secondItem="nXa-vF-ni3" secondAttribute="height" id="d7t-cn-HQF"/>
                                 <constraint firstItem="nXa-vF-ni3" firstAttribute="width" secondItem="o6d-DY-2du" secondAttribute="width" multiplier="1:4" id="igm-UE-bEZ"/>
                                 <constraint firstItem="4sg-gP-UtQ" firstAttribute="width" secondItem="xwe-6q-Iz6" secondAttribute="width" id="lEg-F9-gZb"/>
                                 <constraint firstItem="xwe-6q-Iz6" firstAttribute="height" secondItem="gWL-5R-uoU" secondAttribute="height" id="nvC-xJ-8bo"/>
+                                <constraint firstItem="oOK-tU-RCP" firstAttribute="top" secondItem="nXa-vF-ni3" secondAttribute="bottom" id="rof-Zy-k5R"/>
                                 <constraint firstItem="gWL-5R-uoU" firstAttribute="leading" secondItem="nXa-vF-ni3" secondAttribute="trailing" id="uWo-w9-W6A"/>
                                 <constraint firstItem="xwe-6q-Iz6" firstAttribute="leading" secondItem="gWL-5R-uoU" secondAttribute="trailing" id="woG-rW-91i"/>
                                 <constraint firstItem="nXa-vF-ni3" firstAttribute="top" secondItem="o6d-DY-2du" secondAttribute="top" id="yRS-xs-zsH"/>
                                 <constraint firstItem="xwe-6q-Iz6" firstAttribute="centerY" secondItem="gWL-5R-uoU" secondAttribute="centerY" id="ygl-oO-5W3"/>
-                                <constraint firstItem="nXa-vF-ni3" firstAttribute="height" secondItem="o6d-DY-2du" secondAttribute="height" id="z2i-jM-tQK"/>
+                                <constraint firstItem="nXa-vF-ni3" firstAttribute="height" secondItem="o6d-DY-2du" secondAttribute="height" multiplier="1:2" id="z2i-jM-tQK"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -695,27 +706,22 @@
                         <constraint firstItem="qXR-PQ-Kzt" firstAttribute="leading" secondItem="GT4-yB-FWe" secondAttribute="leading" constant="24" id="LdE-Qb-qpF"/>
                         <constraint firstItem="G4i-Br-NOP" firstAttribute="bottom" secondItem="Zci-Hf-dRx" secondAttribute="top" constant="-30" id="Mbk-I6-1i2"/>
                         <constraint firstAttribute="bottom" secondItem="o6d-DY-2du" secondAttribute="bottom" constant="50" id="Oqe-UQ-oGG"/>
-                        <constraint firstItem="o6d-DY-2du" firstAttribute="height" secondItem="ANF-xb-akF" secondAttribute="height" multiplier="1:2" id="OvP-jN-bi6"/>
-                        <constraint firstItem="arL-OO-9kw" firstAttribute="trailing" secondItem="S19-7W-cfR" secondAttribute="leading" constant="-20" id="Rh3-Rk-vwc"/>
+                        <constraint firstItem="o6d-DY-2du" firstAttribute="height" secondItem="ANF-xb-akF" secondAttribute="height" id="OvP-jN-bi6"/>
                         <constraint firstItem="o6d-DY-2du" firstAttribute="leading" secondItem="ANF-xb-akF" secondAttribute="leading" id="WtV-cC-K3z"/>
                         <constraint firstItem="G4i-Br-NOP" firstAttribute="top" secondItem="GT4-yB-FWe" secondAttribute="top" constant="20" id="al6-EN-q1V"/>
                         <constraint firstAttribute="trailing" secondItem="G4i-Br-NOP" secondAttribute="trailing" id="cWm-X5-8SZ"/>
                         <constraint firstItem="ANF-xb-akF" firstAttribute="top" secondItem="qXR-PQ-Kzt" secondAttribute="bottom" constant="15" id="dz5-Hz-Dd4"/>
-                        <constraint firstItem="arL-OO-9kw" firstAttribute="centerY" secondItem="S19-7W-cfR" secondAttribute="centerY" id="e3f-lY-em1"/>
                         <constraint firstItem="arL-OO-9kw" firstAttribute="top" secondItem="ANF-xb-akF" secondAttribute="bottom" constant="15" id="xMG-SK-UFf"/>
                     </constraints>
                 </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="1Ys-6q-ii6" secondAttribute="bottom" id="15L-SK-q2A"/>
                 <constraint firstItem="MEM-S9-7JJ" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="4UT-82-5bu"/>
                 <constraint firstItem="MEM-S9-7JJ" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="7Ai-yh-jHE"/>
                 <constraint firstItem="not-2r-EP3" firstAttribute="width" secondItem="not-2r-EP3" secondAttribute="height" multiplier="5:1" id="7nC-lL-vqh"/>
                 <constraint firstItem="MEM-S9-7JJ" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" id="Cj8-Bz-NIo"/>
                 <constraint firstAttribute="bottom" secondItem="GT4-yB-FWe" secondAttribute="bottom" id="IXh-kL-4jb"/>
-                <constraint firstItem="1Ys-6q-ii6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="OaC-GG-1em"/>
-                <constraint firstItem="1Ys-6q-ii6" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="U3z-ac-q6I"/>
                 <constraint firstAttribute="trailing" secondItem="GT4-yB-FWe" secondAttribute="trailing" id="Zaq-ue-yPX"/>
                 <constraint firstAttribute="bottom" secondItem="not-2r-EP3" secondAttribute="bottom" constant="40" id="ald-h2-H20"/>
                 <constraint firstItem="MEM-S9-7JJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="bjU-p5-p1W"/>
@@ -723,14 +729,12 @@
                 <constraint firstItem="GT4-yB-FWe" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eXt-1Y-C5A"/>
                 <constraint firstAttribute="trailing" secondItem="not-2r-EP3" secondAttribute="trailing" id="lJa-n2-4rv"/>
                 <constraint firstItem="not-2r-EP3" firstAttribute="width" secondItem="not-2r-EP3" secondAttribute="height" multiplier="5:1" id="pFU-Aq-KqS"/>
-                <constraint firstAttribute="trailing" secondItem="1Ys-6q-ii6" secondAttribute="trailing" id="zVA-MB-mHz"/>
             </constraints>
         </view>
     </objects>
     <resources>
         <image name="add_blue" width="260" height="260"/>
         <image name="head" width="87" height="87"/>
-        <image name="list_bg" width="700" height="1186"/>
         <image name="logo1" width="500" height="100"/>
     </resources>
 </document>
